# research_evaluator_amd

./: ASSESSMENT.md  BENCHMARK.md  README.md  REPLICABILITY_AUDIT_implementation_plan.md  main.py  pyproject.toml  requirements.txt
agentic-reproducibility-engine/: .gitattributes  .gitignore  DIFFERENTIATION.md  README.md  app.py  index.html  pyproject.toml
agentic-reproducibility-engine/.claude/evals/: agentic-reproducibility.md
agentic-reproducibility-engine/deploy-amd-hf/: .env.example  DEPLOY_AMD.md  Dockerfile.rocm  README.md  docker-compose.amd.yml  requirements-amd.txt
agentic-reproducibility-engine/deploy-amd-hf/huggingface-space/: README.md  index.html
agentic-reproducibility-engine/deploy-amd-hf/scripts/: check_amd_readiness.py  create_hf_static_space.py  start_agent_api.sh  start_vllm_qwen.sh
agentic-reproducibility-engine/evals/: agentic_audit_cases.json
agentic-reproducibility-engine/scripts/: run-local.ps1  run_evals.py  run_local_server.py  vllm-qwen35-amd.sh
agentic-reproducibility-engine/src/agentic_research_evaluator/: __init__.py  agent_runtime.py  api.py  autonomy.py  evals.py  graph.py  model_runtime.py  pdf_intake.py  reporting.py  schemas.py  store.py  (+1 more)
agentic-reproducibility-engine/submission-package/: BUILD_IN_PUBLIC.md  FINAL_CHECKLIST.md  JUDGING_ALIGNMENT.md  README.md  SOURCE_NOTES.md  SUBMISSION_FORM.md  package-manifest.json
agentic-reproducibility-engine/tests/: test_agent_graph.py  test_eval_harness.py  test_pdf_intake.py
cb1/: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements-amd.txt
cb1/artifacts/: baseline.json  dataset-card.json  report.md  result-table.json  robustness-surface.json  run-manifest.json  specs-approved.json  specs-rejected.json
cb1/assets/: slides.html
cb1/docs/: AGENTIC_ARCHITECTURE.md  AMD_ROCM_FEEDBACK.md  BUILD_IN_PUBLIC_DRAFTS.md  COMPLETION_AUDIT.md  DEMO_SCRIPT.md  FINAL_EXTERNAL_STEPS.md  MI300X_RUNBOOK.md  PITCH_DECK.md  REMOTE_MI300X_HANDOFF.md  SUBMISSION_PACKET.md  SUBMISSION_READINESS.md  WIKI_C_ALIGNMENT.md
cb1/scripts/: amd_devcloud_run.sh  check_submission.py  create_submission_assets.py  export_hf_space.py  export_static_space.py  finalize_submission.py  import_benchmark.py  local_preview_app.py  mi300x_preflight.py  package_submission.py  plan_reproduction.py  run_benchmark.py  run_pipeline.py  start_amd_backend.py  write_package_checksums.py
cb1/space/: README.md  index.html
cb1/speccurve_l0/: __init__.py  agentic_planner.py  agentic_schema.py  agentic_verifier.py  amd_backend.py  analysis.py  artifacts.py  baseline.py  benchmark.py  benchmark_contract.py  data.py  linear.py  llm_client.py  matching.py  pipeline.py  remote.py  report.py  specs.py  surface.py  verifier.py
cb1/tests/: test_agentic_workflow.py  test_core_contracts.py
(+138 files in other folders)
