[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_repro"]

[project]
name = "research-repro"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
  "langgraph>=0.2",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "typer>=0.12",
  "httpx>=0.27",
  "openai>=1.30",
  "pymupdf>=1.24",
  "pdfplumber>=0.11",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "arxiv>=2.1",
  "tavily-python>=0.3",
  "datasets>=2.18",
  "kaggle>=1.6",
  "PyGithub>=2.3",
  "pandas>=2.2",
  "numpy>=1.26",
  "scipy>=1.13",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "reportlab>=4.0",
  "mistune>=3.0",
  "python-dotenv>=1.0",
  "gradio>=4.0",
  "astroquery>=0.4",
  "instructor>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-httpx>=0.30", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
repro = "research_repro.cli:app"
