[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-research-evaluator"
version = "0.1.0"
description = "AMD-hosted multi-agent research reproducibility evaluator"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi>=0.115",
  "pypdf>=5.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30",
]
test = [
  "httpx>=0.27",
  "pytest>=8.0",
]

[project.scripts]
agentic-research-evaluator-evals = "agentic_research_evaluator.evals:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
