[project]
name = "speccurve-l0-hf-space"
version = "0.1.0"
description = "SpecCurve L0 AMD MI300X Hugging Face Space prototype"
requires-python = ">=3.11"
dependencies = [
  "gradio>=5.0",
]

[project.optional-dependencies]
amd = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
